# TIAGO_Bachelor_Thesis

./: .gitignore  .gitmodules  README.md  ROBOT_PKG_DEPLOYMENT.md  robot_deployment.md
docs/figs/: bt_three_graph.tex  node_graph.tex
ros-ws/: .dockerignore  .gitignore  Dockerfile  Dockerfile.opencv4  README.md  tiago_public-melodic.rosinstall
ros-ws/scripts/: apriltag_generator.py
ros-ws/src/: CMakeLists.txt
ros-ws/src/tiago/: README.md  record_bag.sh
ros-ws/src/tiago/tiago_arm_manipulation/: CMakeLists.txt  README.md  package.xml
ros-ws/src/tiago/tiago_arm_manipulation/config/: arm_manipulation.yaml
ros-ws/src/tiago/tiago_arm_manipulation/launch/: arm_manipulation.launch
ros-ws/src/tiago/tiago_arm_manipulation/scripts/: arm_manipulation_node.py
ros-ws/src/tiago/tiago_arm_manipulation/srv/: DoorPregrasp.srv  MoveToNamed.svr  MoveToPose.srv
ros-ws/src/tiago/tiago_door_bringup/: CMakeLists.txt  README.md  package.xml
ros-ws/src/tiago/tiago_door_bringup/launch/: generate_reachability_map.launch  main.launch  replay.launch
ros-ws/src/tiago/tiago_door_bringup/rviz/: tiago_door_nav.rviz
ros-ws/src/tiago/tiago_door_bt/: CMakeLists.txt  README.md  package.xml
ros-ws/src/tiago/tiago_door_bt/launch/: door_bt.launch
ros-ws/src/tiago/tiago_door_bt/scripts/: bt_nodes.py  door_bt_executor.py
ros-ws/src/tiago/tiago_door_localization/: CMakeLists.txt  README.md  package.xml
ros-ws/src/tiago/tiago_door_localization/config/: apriltag_two_sided_door.yaml
ros-ws/src/tiago/tiago_door_localization/config/test/: tag0_as_pull_hinge_left.yaml  tag0_as_pull_hinge_right.yaml  tag0_as_push_hinge_left.yaml  tag0_as_push_hinge_right.yaml
ros-ws/src/tiago/tiago_door_localization/launch/: door_preception_tags.launch
ros-ws/src/tiago/tiago_door_localization/scripts/: door_model_from_tag_node.py  door_tag_pose_node.py  doorway_pose_node.py
ros-ws/src/tiago/tiago_door_planning/: CMakeLists.txt  README.md  package.xml  setup.py
ros-ws/src/tiago/tiago_door_planning/action/: ExecuteDoorOpening.action  PlanDoorOpening.action
ros-ws/src/tiago/tiago_door_planning/config/: planner.yaml
ros-ws/src/tiago/tiago_door_planning/launch/: door_execution.launch  door_planning.launch
ros-ws/src/tiago/tiago_door_planning/maps/: reachability_map_2_left.npz  reachability_map_2_right.npz  reachability_map_4D_left.npz  reachability_map_4D_new_left.npz  reachability_map_4D_new_right.npz  reachability_map_4D_old_right.npz  reachability_map_4D_right.npz  sim_map.npz  sim_map_left_arm.npz  sim_map_right_arm.npz
ros-ws/src/tiago/tiago_door_planning/scripts/: door_execution_server.py  door_planning_server.py  generate_reachability_map.py  test_door_opening.py  test_grasp_pose.py  tune_base_pid.py  visualize_lattice_search.py  visualize_path_frames.py  visualize_reachability_map.py
ros-ws/src/tiago/tiago_door_planning/src/tiago_door_planning/: arm_planner.py  costs.py  door_collision.py  door_model.py  execution_monitor.py  feasibility.py  intervals.py  lattice.py  planner_config.py  planner_core.py  planner_logs.py  reachability.py  search_core.py  traj_gen.py  utils.py
ros-ws/src/tiago/tiago_door_planning/tests/: test_execution_monitoring.py  test_feasibility_intervals.py  test_planner_helpers.py  test_reachability_map.py
ros-ws/src/tiago/tiago_door_sim/: CMakeLists.txt  README.md  package.xml
ros-ws/src/tiago/tiago_door_sim/launch/: door_edit.launch  sim_with_door.launch
ros-ws/src/tiago/tiago_door_sim/models/apriltag_plate_0/: model.config  model.sdf
ros-ws/src/tiago/tiago_door_sim/models/apriltag_plate_0/materials/scripts/: tag.material
ros-ws/src/tiago/tiago_door_sim/models/apriltag_plate_1/: model.config  model.sdf
ros-ws/src/tiago/tiago_door_sim/models/apriltag_plate_1/materials/scripts/: tag.material
ros-ws/src/tiago/tiago_door_sim/models/apriltag_plate_2/: model.config  model.sdf
ros-ws/src/tiago/tiago_door_sim/models/apriltag_plate_2/materials/scripts/: tag.material
ros-ws/src/tiago/tiago_door_sim/models/apriltag_plate_3/: model.config  model.sdf
ros-ws/src/tiago/tiago_door_sim/models/apriltag_plate_3/materials/scripts/: tag.material
ros-ws/src/tiago/tiago_door_sim/models/hinged_door/: model.config  model.sdf
ros-ws/src/tiago/tiago_door_sim/models/hinged_door_left/: model.config  model.sdf
ros-ws/src/tiago/tiago_door_sim/models/hinged_door_right/: model.config  model.sdf
ros-ws/src/tiago/tiago_door_sim/scripts/: tuck_arm.py
ros-ws/src/tiago/tiago_door_sim/worlds/: small_office_with_door.world
ros-ws/src/tiago/tiago_move_base_control/: CMakeLists.txt  README.md  package.xml  plugin.xml
ros-ws/src/tiago/tiago_move_base_control/config/: door_approach.yaml
ros-ws/src/tiago/tiago_move_base_control/include/tiago_move_base_control/: DoorMaskLayer.h
ros-ws/src/tiago/tiago_move_base_control/launch/: door_nav.launch  move_base_control.launch  tiago_move_base.launch
ros-ws/src/tiago/tiago_move_base_control/scripts/: door_approach_goal_generator_node.py  move_base_goal_sender.py
ros-ws/src/tiago/tiago_move_base_control/src/: DoorMaskLayer.cpp
ros-ws/src/tiago/tiago_slam/: CMakeLists.txt  README.md  package.xml
ros-ws/src/tiago/tiago_slam/config/orb3/: TIAGo_Xtion_Mono.yaml
ros-ws/src/tiago/tiago_slam/config/rtab/: ekf_odom.yaml
ros-ws/src/tiago/tiago_slam/launch/: orb3_mono_slam.launch  orb_mono_slam.launch  orb_rgbd_slam.launch  rtab_mono_slam.launch  rtab_slam.launch  slam_foundation.launch  tiago_slam.launch
ros-ws/src/tiago/tiago_slam/rviz/: orb3_mono_slam.rviz  orb_mono_slam.rviz  orb_slam.rviz  rtab_mono_slam.rviz  rtab_slam.rviz  slam_view.rviz
ros-ws/src/tiago/tiago_slam/scripts/: kill_head_nodes.py  kill_pal_nav_nodes.py  laser_processor.py  tf_to_pose.py  trajectory_publisher.py
ros-ws/src/tiago/tiago_vicon/: CMakeLists.txt  README.md  package.xml
ros-ws/src/tiago/tiago_vicon/launch/: position_logger.launch  tiago_vicon.launch
ros-ws/src/tiago/tiago_vicon/src/: path_recorder.py  path_replay.py  position_logger.py
