<?xml version="1.0"?>
<package format="2">
  <name>tiago_arm_manipulation</name>
  <version>0.1.0</version>
  <description>TIAGo arm manipulation utilities (MoveIt + gripper + door pregrasp).</description>

  <maintainer email="you@todo.todo">todo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>

  <export/>
</package>