<?xml version="1.0"?>
<package format="2">
  <name>tiago_door_bt</name>
  <version>0.0.1</version>
  <description>Behavior Tree executive for door approach and opening pipeline (ROS1 Melodic)</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>

  <!-- Python BT library (ROS package name in Melodic) -->
  <depend>py_trees</depend>

  <export/>
</package>