<?xml version="1.0"?>
<package format="2">
  <name>tiago_door_planning</name>
  <version>0.1.0</version>
  <description>Door opening planning (base + arm) producing trajectories for BT/executors.</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- action generation -->
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Python -->
  <build_depend>rospy</build_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- msgs -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <!-- TF -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- MoveIt python -->
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <!-- Optional for costmap grid -->
  <exec_depend>map_msgs</exec_depend>

  <!-- Python -->
  <exec_depend>rospy</exec_depend>
</package>