<?xml version="1.0"?>
<package format="2">
  <name>tiago_vicon</name>
  <version>0.0.0</version>
  <description>The tiago_vicon package</description>
  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>vrpn_client_ros</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>vrpn_client_ros</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>vrpn_client_ros</exec_depend>

  <export>

  </export>
</package>
